# Testes-Opencl

./: .gitignore  README
matrixmulti/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.c  matrix  matrixmulti.cl  opcl.c  opcl.h  opcl.ptx  repeat.sh
memory-bound/: CMakeLists.txt  kernel.cl  main.c  memory  opcl.ptx  repeat.sh
process-bound/: kernel.cl  main.c  opcl.ptx  repeat.sh
process-optmized/: CMakeLists.txt  kernel.cl  memory  opcl.ptx  process
testedememoria/: CMakeLists.txt  main.c  matrix  matrixmulti.cl  opcl.c  opcl.ptx  repeat.sh
